Revision history for Religion-Bible-Reference

0.014   2009-03-16
        simplify the data structure storing book definitions (partial patch by
        Otto Hirr)

0.013   2008-08-09
        added stringify_short (suggested by Rohan Carly)
 
0.012   2008-06-14
        correct chapter/verse counts in Ex, 1Sam, Zec, Ps, Acts, 2Cor
        (thanks to Joshua Barratt for noticing and (!) patching)

0.011   2006-11-10
        some cleanup
        still not suitable for much

0.01    2006-03-16
        still not suitable for much